--- a/.github/workflows/develop-publish.yaml
+++ b/.github/workflows/develop-publish.yaml
@@ -23,12 +23,12 @@ jobs:
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          aws-access-key-id: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.DEV_AWS_REGION }}
 
       - name: Upload file to S3
         run: |
-          aws s3 cp ./widget-sdk.js "s3://$S3_BUCKET_NAME/packages/v1/${{ env.VERSION }}.js"
-          aws s3 cp ./widget-sdk.js "s3://$S3_BUCKET_NAME/packages/v1/latest.js"
+          aws s3 cp ./widget-sdk.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/${{ env.VERSION }}.js"
+          aws s3 cp ./widget-sdk.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/latest.js"
 
