--- a/.github/workflows/staging-publish.yaml
+++ b/.github/workflows/staging-publish.yaml
@@ -2,8 +2,8 @@ name: Upload new version to S3 STAGING CDN
 
 on:
   push:
-    branches:
-      - staging
+    tags:
+      - '*-beta'
 
 jobs:
   upload:
