--- a/.github/workflows/prod-publish.yaml
+++ b/.github/workflows/prod-publish.yaml
@@ -23,5 +23,13 @@ jobs:
 
       - name: Upload file to S3
         run: |
-          aws s3 cp "s3://cdn.intelliprove.com/packages/intelli-widgets/v1/beta.js" "s3://cdn.intelliprove.com/packages/intelli-widgets/v1/latest.js"
+          aws s3 cp ./widget-sdk.js "s3://cdn.intelliprove.com/packages/intelli-widgets/v1/latest.js"
+
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation --distribution-id EAPK5U8J3EZ65  --paths "/packages/intelli-widgets/*"
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.PROD_AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.PROD_AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: "eu-west-1"
 
