🐛 fix trailing comma

--- a/package.json
+++ b/package.json
@@ -13,5 +13,5 @@
 		"widgets",
 		"jsdoc"
 	],
-	"author": "Seppe De Langhe <seppe.delanghe@intelliprove.com>",
+	"author": "Seppe De Langhe <seppe.delanghe@intelliprove.com>"
 }
