--- a/.github/workflows/develop-publish.yaml
+++ b/.github/workflows/develop-publish.yaml
@@ -20,6 +20,12 @@ jobs:
           version=$(./extract-version.sh ./widget-sdk.js)
           echo "VERSION=${version}" >> $GITHUB_ENV
 
+      - name: Modify NPM version & create package
+        id: npm-pack
+        run: |
+          npm version "${{ env.VERSION }}" --no-git-tag-version
+          npm pack
+
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -31,4 +37,5 @@ jobs:
         run: |
           aws s3 cp ./widget-sdk.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/${{ env.VERSION }}.js"
           aws s3 cp ./widget-sdk.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/latest.js"
+          aws s3 cp "./intelliprove-widget-sdk-${{ env.VERSION }}.tgz" "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/intelliprove-widget-sdk-${{ env.VERSION }}.tgz"
 
