--- a/package.json
+++ b/package.json
@@ -1,17 +1,33 @@
 {
-	"name": "intelliprove-widget-sdk",
-	"version": "1.0.2",
-	"description": "A front-end SDK that makes configuring and mounting IntelliWidgets to the DOM easy.",
-	"main": "widget-sdk.js",
-	"types": "widget-sdk.js",
-	"scripts": {
-		"test": "echo \"No tests configured!\" && exit 1"
-	},
-	"keywords": [
-		"sdk",
-		"intelliprove",
-		"widgets",
-		"jsdoc"
-	],
-	"author": "Seppe De Langhe <seppe.delanghe@intelliprove.com>"
+  "name": "intelliprove-widget-sdk",
+  "version": "1.0.2",
+  "description": "Intelliprove Widgets SDK",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "browser": "dist/index.browser.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "clean": "rimraf dist",
+    "build": "npm run clean && npm run build:types && npm run build:cjs && npm run build:esm && npm run build:browser",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:cjs": "rollup -c --environment FORMAT:cjs",
+    "build:esm": "rollup -c --environment FORMAT:esm",
+    "build:browser": "rollup -c --environment FORMAT:browser"
+  },
+  "keywords": ["intelliprove", "widget", "sdk"],
+  "author": "Seppe De Langhe <seppe.delanghe@intelliprove.com>",
+  "license": "MIT",
+  "devDependencies": {
+    "@babel/core": "^7.22.15",
+    "@babel/preset-env": "^7.22.15",
+    "@babel/preset-typescript": "^7.22.15",
+    "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.3",
+    "@rollup/plugin-node-resolve": "^15.2.1",
+    "@rollup/plugin-typescript": "^11.1.4",
+    "rimraf": "^5.0.1",
+    "rollup": "^3.28.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "typescript": "^5.2.2"
+  }
 }
