--- a/.github/workflows/develop-publish.yaml
+++ b/.github/workflows/develop-publish.yaml
@@ -13,17 +13,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Extract version from JSDoc
+      - name: Extract version from code
         id: extract_version
         run: |
           chmod +x ./extract-version.sh
-          version=$(./extract-version.sh ./widget-sdk.js)
+          version=$(./extract-version.sh)
           echo "VERSION=${version}" >> $GITHUB_ENV
 
-      - name: Modify NPM version & create package
-        id: npm-pack
+      - name: Build and pack 
+        id: npm-build
         run: |
-          npm version "${{ env.VERSION }}" --no-git-tag-version
+          npm run build
           npm pack
 
       - name: Set up AWS CLI
@@ -35,7 +35,7 @@ jobs:
 
       - name: Upload file to S3
         run: |
-          aws s3 cp ./widget-sdk.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/${{ env.VERSION }}.js"
-          aws s3 cp ./widget-sdk.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/latest.js"
+          aws s3 cp ./dist/browser.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/${{ env.VERSION }}.js"
+          aws s3 cp ./dist/browser.js "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/latest.js"
           aws s3 cp "./intelliprove-widget-sdk-${{ env.VERSION }}.tgz" "s3://cdn-dev.intelliprove.com/packages/intelli-widgets/v1/${{ env.VERSION }}-dev.tgz"
 
