--- a/package.json
+++ b/package.json
@@ -7,27 +7,30 @@
   "browser": "dist/index.browser.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "clean": "rimraf dist",
+    "clean": "rm -rf ./dist",
     "build": "npm run clean && npm run build:types && npm run build:cjs && npm run build:esm && npm run build:browser",
     "build:types": "tsc --emitDeclarationOnly",
     "build:cjs": "rollup -c --environment FORMAT:cjs",
     "build:esm": "rollup -c --environment FORMAT:esm",
     "build:browser": "rollup -c --environment FORMAT:browser"
   },
-  "keywords": ["intelliprove", "widget", "sdk"],
+  "keywords": [
+    "intelliprove",
+    "widget",
+    "sdk"
+  ],
   "author": "Seppe De Langhe <seppe.delanghe@intelliprove.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.22.15",
-    "@babel/preset-env": "^7.22.15",
-    "@babel/preset-typescript": "^7.22.15",
-    "@rollup/plugin-babel": "^6.0.3",
-    "@rollup/plugin-commonjs": "^25.0.3",
-    "@rollup/plugin-node-resolve": "^15.2.1",
-    "@rollup/plugin-typescript": "^11.1.4",
-    "rimraf": "^5.0.1",
-    "rollup": "^3.28.0",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-typescript": "^12.1.1",
+    "rollup": "^2.79.2",
     "rollup-plugin-terser": "^7.0.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.7.2"
   }
 }
