--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "rollup": "^2.79.2",
     "rollup-plugin-terser": "^7.0.2",
+    "tslib": "^2.8.1",
     "typescript": "^5.7.2"
   }
 }
