--- a/package.json
+++ b/package.json
@@ -28,9 +28,9 @@
     "@rollup/plugin-babel": "^6.0.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
     "rollup": "^2.79.2",
-    "rollup-plugin-terser": "^7.0.2",
     "tslib": "^2.8.1",
     "typescript": "^5.7.2"
   }
