--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,8 @@
     "strict": true,
     "outDir": "dist",
     "moduleResolution": "node",
-    "lib": ["ES2015", "DOM"],
+    "lib": ["ES2016", "DOM"],
     "skipLibCheck": true
   },
-  "include": [
-	"src/**/*",
-	"extensions/**/*"
-  ],
+  "include": ["src/**/*", "extensions/**/*"]
 }
