--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "intelliprove-widget-sdk",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Intelliprove Widgets SDK",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.browser.js",
   "types": "dist/index.d.ts",
   "scripts": {
+	"watch": "watch 'npm run build' ./src",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npm run build:types && npm run build:cjs && npm run build:esm && npm run build:browser",
     "build:types": "tsc --emitDeclarationOnly",
@@ -32,6 +33,7 @@
     "@rollup/plugin-typescript": "^12.1.1",
     "rollup": "^2.79.2",
     "tslib": "^2.8.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "watch": "^1.0.2"
   }
 }
