♻️ replace 'intelli-widget-id' for styles

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intelliprove-widget-sdk",
-  "version": "1.1.2",
+  "version": "1.1.2-beta",
   "description": "Intelliprove Widgets SDK",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
