--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "intelliprove-widget-sdk",
-  "version": "1.1.2-beta",
+  "version": "1.2.0",
   "description": "Intelliprove Widgets SDK",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "browser": "dist/index.browser.js",
   "types": "dist/index.d.ts",
   "scripts": {
-	"watch": "watch 'npm run build' ./src",
+    "watch": "watch 'npm run build' ./src",
     "clean": "rm -rf ./dist",
     "build": "npm run clean && npm run build:types && npm run build:cjs && npm run build:esm && npm run build:browser",
     "build:types": "tsc --emitDeclarationOnly",
