--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "intelliprove-widget-sdk",
-  "version": "1.5.3-beta",
+  "version": "2.0.0",
   "description": "Intelliprove Widgets SDK",
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
